[Fix] Overflow.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,7 @@
 @import "article";
 @import "author";
 @import "footer";
+
+body {
+  overflow-x: hidden;
+}
